<resources>
    <string name="app_name">LifeBoi</string>
    <string name="login_button">Login</string>
    <string name="signUp_button">Sign Up</string>
    <string name="back_button">Back</string>
    <string name="fitness_button">Fitness</string>
    <string name="event_button">Events</string>
    <string name="weather_button">Weather</string>
    <string name="fitness_name">Fitness!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pushups">2 Sets of 50 Pushups</string>
    <string name="pullups">4 Sets of 25 Pullups</string>
    <string name="leglifts">2 Sets of 50 Leg Lifts</string>
    <string name="squats">4 Sets of 50 Squats</string>
    <string name="fitnessToast">You are Fitness!</string>
    <string name="location">location</string>
    <string name="currentcondition">currentCondition</string>
    <string name="currenttemp">currentTemp</string>
    <string name="dayhightemp">dayHighTemp</string>
    <string name="daylowtemp">dayLowTemp</string>
    <string name="sunrisetime">sunriseTime</string>
    <string name="sunsettime">sunsetTime</string>
    <string name="windspeed">windspeed</string>
    <string name="humidity">humidity</string>
    <string name="feelslike">feelslike</string>
    <string name="visibility">visibility</string>
    <string name="clouds">clouds</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="today_s_weather_forecast">Today\'s Weather Forecast</string>

    <string name="view_name">Event</string>
    <string name="view_start">Start</string>
    <string name="view_end">End</string>
    <string name="view_location">Location</string>
    <string name="view_host">Host</string>
    <string name="view_back_button">Back</string>
    <string name="view_delete_button">Delete</string>

</resources>