<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bignerdranch.android.lifeboi.FitnessFragment">

    <TextView
        android:id="@+id/fitnessTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fitness_name" />

    <CheckBox
        android:id="@+id/pushups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pushups" />

    <CheckBox
        android:id="@+id/pullups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pullups" />

    <CheckBox
        android:id="@+id/leglifts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leglifts" />

    <CheckBox
        android:id="@+id/squats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/squats" />
</LinearLayout>