<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_name"
        android:gravity="center"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/view_start"
            android:text="@string/view_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/view_end"
            android:text="@string/view_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="30sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/view_host"
        android:text="@string/view_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/view_location"
        android:text="@string/view_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/view_invitees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/invitationChipStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/view_back_button"
            android:text="@string/view_back_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/view_delete_button"
            android:text="@string/view_delete_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>






</LinearLayout>